1)Passando paear dois arquivos, um js e outor html 2) Passando para OO

--- a/index.html
+++ b/index.html
@@ -14,98 +14,6 @@
 </head>
 <body>
     <canvas></canvas>
-    <script>
-        const elemento_canvas = document.querySelector("canvas");
-        const context_canvas = elemento_canvas.getContext("2d");    
-
-        function setup()
-        {
-            elemento_canvas.width = window.innerWidth;
-            elemento_canvas.height = window.innerHeight;
-
-            context_canvas.width = window.innerWidth;
-            context_canvas.height = window.innerHeight;
-        }
-
-        function draw()
-        {
-            drawField();
-            drawCenterLine();
-            drawRackets();
-            drawBall();
-            drawGameScore();
-        }
-
-        function drawField()
-        {
-            context_canvas.fillStyle = "#286047";
-            context_canvas.fillRect(0,0,window.innerWidth,window.innerHeight);    
-        }
-
-        function drawCenterLine()
-        {
-            const line_width = 15;
-            const x = window.innerWidth/2 - line_width/2;
-            const y = 0;
-            const line_heigth = window.innerHeight;
-
-            context_canvas.fillStyle = "#ffffff";
-            context_canvas.fillRect(x,y,line_width,line_heigth);  
-        }
-
-        function drawRackets()
-        {
-            drawLeftRacket();
-            drawRightRacket();
-        }
-
-        function drawLeftRacket()
-        {
-            const x = 10;
-            const y = 400;
-            const line_width = 15;
-            const line_heigth = 200;
-
-            context_canvas.fillRect(x,y,line_width,line_heigth);  
-        }
-
-        function drawRightRacket()
-        {
-            const line_width = 15;
-            const line_heigth = 200;
-            const x = window.innerWidth - line_width - 10;
-            const y = 400;
-
-            context_canvas.fillRect(x,y,line_width,line_heigth);  
-        }
-
-        function drawBall()
-        {
-            context_canvas.beginPath();
-            context_canvas.arc(200,300,20,0,2*Math.PI,false);
-            context_canvas.fill();
-        }
-
-        function drawGameScore()
-        {
-            context_canvas.font = "bold 72px Arial";
-            context_canvas.textAlign = "center";
-            context_canvas.textBaseline = "top";
-            context_canvas.fillStyle = "#01341D";
-            context_canvas.fillText(
-                '0', 
-                window.innerWidth / 4,
-                50,
-            );
-            context_canvas.fillText(
-                '0', 
-                window.innerWidth / 4 + window.innerWidth/2,
-                50,
-            );
-        }
-
-        setup();
-        draw();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
