--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style>
         *{
             margin: 0;
-            padding: 0;
             overflow: hidden;
+            padding-bottom: 2rem;
         }
     </style>
 </head>
